[package]
name = "jpdb-unproblemizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = {version= "0.8.0", default_features = false}
anyhow = { version = "1.0", features = ["backtrace"] }
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.13"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
chrono = "0.4.19"
